0.030 2024-12-16
  [Bug Fix]
    * Fix bugs of Net::SSLeay#get_SSL_CTX method.
  [New Features]
    * Add Net::SSLeay#msg_callback getter.
    * Add Net::SSLeay#msg_callback_arg field and settter and getter.
  [Incompatible Changes]
    * Change the definition of Net::SSLeay#set_msg_callback method.
      [Before]
      method set_msg_callback : void ($cb : Net::SSLeay::Callback::Msg, $arg : object = undef);
      [After]
      method set_msg_callback : void ($cb : Net::SSLeay::Callback::Msg);
    
0.029 2024-12-16
  [Bug Fix]
    * Fix bugs of Net::SSLeay#get_certificate method.
    * Fix bugs of Net::SSLeay#get_cert_chaine method.
    * Fix bugs of Net::SSLeay#load_client_CA_file method.
0.028 2024-12-13
  [Bug Fix]
    * Fix bugs of Net::SSLeay#get_SSL_CTX method.
    * Fix bugs of Net::SSLeay#set_SSL_CTX method.
  [Test Improvement]
    * Online tests are skipped in offline systems.
  [Changes]
    * $type argument of Net::SSLeay::SSL_CTX#use_certificate_file method becomes optional.
    * $type argument of Net::SSLeay::SSL_CTX#use_PrivateKey_file method becomes optional.
    * Net::SSLeay::Error::SSL_ERROR_WANT_READ and Net::SSLeay::Error::SSL_ERROR_WANT_WRITE are thrown in connect_SSL, accept_SSL, write, read, shutdown methods in Net::SSLeay class.
  [New Features]
    * Add SSL_ERROR_WANT_WRITE class.
    * Add SSL_ERROR_WANT_READ class.
    
0.027 2024-12-12
  [New Features]
    * Add Net::SSLeay::SSL_CTX#set_alpn_select_cb method.
  [Incompatibe Changes]
    * Remove Net::SSLeay::SSL_CTX#set_next_proto_select_cb method.
    * Remove Net::SSLeay::SSL_CTX#set_next_proto_select_cb_with_protocols method.
    * Remove Net::SSLeay::SSL_CTX#set_next_protos_advertised_cb_with_protocols method.
    * Remove Net::SSLeay::SSL_CTX#set_tlsext_servername_callback method.
    * Remove Net::SSLeay::SSL_CTX#set_psk_client_callback method.
    * Remove Net::SSLeay::SSL_CTX#set_psk_server_callback method.
    * Remove Net::SSLeay::SSL_CTX#set_tlsext_ticket_key_cb method.